# solana-ua-bootcamp-2024-08-06

practice-1/key-grinder/: index.ts  package-lock.json  package.json  tsconfig.json
practice-2/: .env  Cargo.toml  destination-keypair.json  payer-keypair.json  signer1-keypair.json  signer2-keypair.json
practice-3/approve_escrow/: Anchor.toml
practice-3/approve_escrow/programs/approve_escrow/: Cargo.toml
practice-3/approve_escrow/programs/approve_escrow/src/: lib.rs
practice-3/approve_escrow/programs/approve_escrow/src/instructions/: make_offer.rs  take_offer.rs
practice-3/approve_escrow/tests/: approve_escrow.test.ts
