[package]
name = "solana_rust_project"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.22"
solana-sdk = "1.18.22"
solana-client = "1.18.22"
mpl-token-metadata = "3.2.3"  # Обновленная версия
spl-associated-token-account = "1.1.3"
spl-token = "4.0.0"
dotenv = "0.15"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
borsh = "0.10"
solana-transaction-status = "1.18.22" # Добавьте эту строку

[workspace]
members = [
    "src/bin/send-sol",
    "src/bin/create-token-mint",
    "src/bin/create-token-account",
    "src/bin/mint-tokens",
    "src/bin/create-token-metadata",
]
