[package]
name = "solana_multisig_token"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.22"  # Убедитесь, что это последняя версия
solana-sdk = "1.18.22"      # Убедитесь, что это последняя версия
solana-client = "1.18.22"   # Убедитесь, что это последняя версия
spl-token = "4.0.0"         # Поддерживает TOKEN_2022_PROGRAM_ID
spl-associated-token-account = "3.0.4" # Совместимо с новой программой токенов
anyhow = "1.0"
